--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               The Rise and Fall of Trantor
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Through the data, darkly
+tagline:             'Exploring humans and society through data'
+description:         'Clayton Besaw is a PhD student in the Political Science department at the Univeristy of Central Florida. This site details his research and thoughts concerning politics, data-science, and everything in-between.'
+url:                 cbesaw.github.io
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:             Clayton Besaw
+  url:              https://twitter.com/claytonbesaw
+  email:            claybesaw@gmail.com
 
 # Custom vars
 version:             1.0.0
