--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Through the data, darkly
 tagline:             
 description:         'Clayton Besaw is a PhD student in the Political Science department at the Univeristy of Central Florida. This site details his research and thoughts concerning politics, data-science, and everything in-between.'
 url:                 cbesaw.github.io
-baseurl:             'http://cbesaw.com'
+baseurl:             ''
 paginate:            5
 
 # About/contact
