--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,14 @@ paginate:            5
 
 # About/contact
 author:
-  name:             Clayton Besaw
-  url:              https://twitter.com/claytonbesaw
-  email:            claybesaw@gmail.com
+  name:'Clayton Besaw'
+  email 'claybesaw[at]gmail[dot]com'
+  github: cbesaw
+  twitter: Clayton Besaw
+  google_scholar: https://scholar.google.com/citations?user=LOouXxgAAAAJ
+  linkedin: clayton besaw
+  
+  
 
 # Custom vars
 version: 1.0
