--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+#dependencies
+markdown: kramdown
+highlighter: pygments
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
