--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ author:
   name: 'Clayton Besaw'
   email: 'claybesaw[at]gmail[dot]com'
   github: cbesaw
-  twitter: Clayton Besaw
+  stacko: http://stackoverflow.com/users/5748647/cbesaw
   google_scholar: https://scholar.google.com/citations?user=LOouXxgAAAAJ
+  twitter: Clayton Besaw
   linkedin: clayton besaw
   
   
