--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: true
 
 # Setup
 title:               Through the data, darkly
-tagline:             Exploring society through numbers
+tagline:             
 description:         'Clayton Besaw is a PhD student in the Political Science department at the Univeristy of Central Florida. This site details his research and thoughts concerning politics, data-science, and everything in-between.'
 url:                 cbesaw.github.io
 baseurl:             ''
